// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeonListLayout renders basic layout with pagination 1`] = `
<div class="neon-list-layout">
  <div>
    <div class="neon-stack--gap-l neon-stack neon-header--page neon-header">
      <!-- @slot stack contents -->
      <div class="neon-swiper--horizontal neon-swiper--fade neon-swiper neon-breadcrumbs--responsive-swiper neon-breadcrumbs">
        <div class="neon-swiper__container">
          <!-- @slot contents of swiper with which to apply overflow scrolling. -->
          <div class="neon-breadcrumbs__container"><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__back neon-breadcrumbs__back" tabindex="0">
              <!-- @slot the content of the link -->
              <!--v-if--><span class="neon-breadcrumbs__back-label">Back</span>
            </a>
            <!--v-if-->
          </div>
        </div>
        <div class="neon-swiper__fade-out"></div>
      </div>
      <div class="neon-inline--gap-l neon-inline neon-header__content">
        <!-- @slot inline contents -->
        <div class="neon-stack--gap-s neon-stack neon-header__content-copy">
          <!-- @slot stack contents -->
          <div class="neon-inline--gap-m neon-inline neon-header__title-wrapper">
            <!-- @slot inline contents -->
            <h1 class="neon-header__title">test title</h1>
            <div class="neon-inline--gap-m neon-inline neon-header__labels">
              <!-- @slot inline contents -->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div class="neon-inline--gap-s neon-inline neon-header__actions">
          <!-- @slot inline contents -->
        </div>
      </div>
    </div><!-- @slot the insert a note into the page -->
    <div class="neon-card-list--list neon-card-list">
      <!-- @slot slot for providing a filter bar component -->
      <div class="neon-inline--gap-l neon-inline neon-card-list__header">
        <!-- @slot inline contents -->
      </div>
      <div class="neon-card-list__cards">
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card--disabled neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
      </div>
      <div class="neon-pagination--brand neon-pagination"><button class="neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--disabled neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__first neon-pagination__nav-link neon-pagination__first" disabled="" tabindex="-1" type="button">
          <div class="neon-icon--name-first-page neon-icon--high-contrast neon-icon--disabled neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 16 16" fill="none" stroke-linecap="round" height="100%" width="100%">
              <path d="M12.75 13.799999999999999L6.45 7.5L12.75 1.2" stroke="currentColor" class="neon-svg--stroke"></path>
              <path d="M2.25 1.2V13.799999999999999" stroke="currentColor" class="neon-svg--stroke"></path>
            </svg>
          </div>
          <!--v-if-->
          <!--v-if-->
        </button><button class="neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--disabled neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__previous neon-pagination__nav-link neon-pagination__previous" disabled="" tabindex="-1" type="button">
          <div class="neon-icon--name-chevron-left neon-icon--high-contrast neon-icon--disabled neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
              <path class="neon-svg--fill" d="M15.28 5.22a.75.75 0 0 1 0 1.06L9.56 12l5.72 5.72a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.75.75 0 0 1 1.06 0Z"></path>
            </svg>
          </div>
          <!--v-if-->
          <!--v-if-->
        </button>
        <div class="neon-pagination__page-links">
          <!--v-if-->
          <!--v-if-->
          <!-- eslint-disable-next-line --><span class="neon-pagination__link--selected">1</span><a href="/products?page=2" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link" tabindex="0" disabled="false" role="button">
            <!-- @slot the content of the link -->
            <!--v-if--><span class="neon-button__label">2</span>
          </a><a href="/products?page=3" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link" tabindex="0" disabled="false" role="button">
            <!-- @slot the content of the link -->
            <!--v-if--><span class="neon-button__label">3</span>
          </a>
          <div class="neon-icon--name-ellipsis neon-icon--low-contrast neon-icon neon-pagination__more neon-pagination__more"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="100%" height="100%">
              <path class="neon-svg--fill" d="M8 9a1.5 1.5 0 100-3 1.5 1.5 0 000 3zM1.5 9a1.5 1.5 0 100-3 1.5 1.5 0 000 3zm13 0a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path>
            </svg>
          </div><a href="/products?page=100" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link" tabindex="0" disabled="false" role="button">
            <!-- @slot the content of the link -->
            <!--v-if--><span class="neon-button__label">100</span>
          </a>
        </div><a href="/products?page=2" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__next neon-pagination__nav-link neon-pagination__next neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__next neon-pagination__nav-link neon-pagination__next" tabindex="0" disabled="false" role="button">
          <!-- @slot the content of the link -->
          <div class="neon-icon--name-chevron-right neon-icon--high-contrast neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
              <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
            </svg>
          </div>
          <!--v-if-->
        </a><a href="/products?page=100" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__last neon-pagination__nav-link neon-pagination__last neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__last neon-pagination__nav-link neon-pagination__last" tabindex="0" disabled="false" role="button">
          <!-- @slot the content of the link -->
          <div class="neon-icon--name-last-page neon-icon--high-contrast neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 16 16" fill="none" stroke-linecap="round" stroke-linejoin="round" height="100%" width="100%">
              <path d="M2.25 13.799999999999999L8.55 7.5L2.25 1.2" stroke="currentColor" class="neon-svg--stroke"></path>
              <path d="M12.75 1.2V13.799999999999999" stroke="currentColor" class="neon-svg--stroke"></path>
            </svg>
          </div>
          <!--v-if-->
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`NeonListLayout renders breadcrumbs 1`] = `
<div class="neon-list-layout">
  <div>
    <div class="neon-stack--gap-l neon-stack neon-header--page neon-header">
      <!-- @slot stack contents -->
      <div class="neon-swiper--horizontal neon-swiper--fade neon-swiper neon-breadcrumbs--responsive-swiper neon-breadcrumbs">
        <div class="neon-swiper__container">
          <!-- @slot contents of swiper with which to apply overflow scrolling. -->
          <div class="neon-breadcrumbs__container"><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__back neon-breadcrumbs__back" tabindex="0">
              <!-- @slot the content of the link -->
              <!--v-if--><span class="neon-breadcrumbs__back-label">Zurück</span>
            </a>
            <div class="neon-breadcrumbs__links">
              <!--v-if--><a href="/level-1" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0">
                <!-- @slot the content of the link -->Level 1
              </a>
              <div class="neon-icon--name-chevron-right neon-icon neon-breadcrumbs__separator neon-breadcrumbs__separator"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
                </svg>
              </div><a href="/level-1/level-2" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0">
                <!-- @slot the content of the link -->Level 2
              </a>
              <div class="neon-icon--name-chevron-right neon-icon neon-breadcrumbs__separator neon-breadcrumbs__separator"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
                </svg>
              </div><a href="/level-1/level-2/1234-5678-90" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0">
                <!-- @slot the content of the link -->1234-5678-90
              </a>
            </div>
          </div>
        </div>
        <div class="neon-swiper__fade-out"></div>
      </div>
      <div class="neon-inline--gap-l neon-inline neon-header__content">
        <!-- @slot inline contents -->
        <div class="neon-stack--gap-s neon-stack neon-header__content-copy">
          <!-- @slot stack contents -->
          <div class="neon-inline--gap-m neon-inline neon-header__title-wrapper">
            <!-- @slot inline contents -->
            <h1 class="neon-header__title">test title</h1>
            <div class="neon-inline--gap-m neon-inline neon-header__labels">
              <!-- @slot inline contents -->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div class="neon-inline--gap-s neon-inline neon-header__actions">
          <!-- @slot inline contents -->
        </div>
      </div>
    </div><!-- @slot the insert a note into the page -->
    <div class="neon-card-list--list neon-card-list">
      <!-- @slot slot for providing a filter bar component -->
      <div class="neon-inline--gap-l neon-inline neon-card-list__header">
        <!-- @slot inline contents -->
      </div>
      <div class="neon-card-list__cards">
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card--disabled neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
      </div>
      <div class="neon-pagination--brand neon-pagination"><button class="neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--disabled neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__first neon-pagination__nav-link neon-pagination__first" disabled="" tabindex="-1" type="button">
          <div class="neon-icon--name-first-page neon-icon--high-contrast neon-icon--disabled neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 16 16" fill="none" stroke-linecap="round" height="100%" width="100%">
              <path d="M12.75 13.799999999999999L6.45 7.5L12.75 1.2" stroke="currentColor" class="neon-svg--stroke"></path>
              <path d="M2.25 1.2V13.799999999999999" stroke="currentColor" class="neon-svg--stroke"></path>
            </svg>
          </div>
          <!--v-if-->
          <!--v-if-->
        </button><button class="neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--disabled neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__previous neon-pagination__nav-link neon-pagination__previous" disabled="" tabindex="-1" type="button">
          <div class="neon-icon--name-chevron-left neon-icon--high-contrast neon-icon--disabled neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
              <path class="neon-svg--fill" d="M15.28 5.22a.75.75 0 0 1 0 1.06L9.56 12l5.72 5.72a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.75.75 0 0 1 1.06 0Z"></path>
            </svg>
          </div>
          <!--v-if-->
          <!--v-if-->
        </button>
        <div class="neon-pagination__page-links">
          <!--v-if-->
          <!--v-if-->
          <!-- eslint-disable-next-line --><span class="neon-pagination__link--selected">1</span><a href="/products?page=2" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link" tabindex="0" disabled="false" role="button">
            <!-- @slot the content of the link -->
            <!--v-if--><span class="neon-button__label">2</span>
          </a><a href="/products?page=3" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link" tabindex="0" disabled="false" role="button">
            <!-- @slot the content of the link -->
            <!--v-if--><span class="neon-button__label">3</span>
          </a>
          <div class="neon-icon--name-ellipsis neon-icon--low-contrast neon-icon neon-pagination__more neon-pagination__more"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="100%" height="100%">
              <path class="neon-svg--fill" d="M8 9a1.5 1.5 0 100-3 1.5 1.5 0 000 3zM1.5 9a1.5 1.5 0 100-3 1.5 1.5 0 000 3zm13 0a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path>
            </svg>
          </div><a href="/products?page=100" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--text-transparent neon-button neon-pagination__link neon-pagination__link" tabindex="0" disabled="false" role="button">
            <!-- @slot the content of the link -->
            <!--v-if--><span class="neon-button__label">100</span>
          </a>
        </div><a href="/products?page=2" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__next neon-pagination__nav-link neon-pagination__next neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__next neon-pagination__nav-link neon-pagination__next" tabindex="0" disabled="false" role="button">
          <!-- @slot the content of the link -->
          <div class="neon-icon--name-chevron-right neon-icon--high-contrast neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
              <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
            </svg>
          </div>
          <!--v-if-->
        </a><a href="/products?page=100" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__last neon-pagination__nav-link neon-pagination__last neon-button--m neon-button--high-contrast neon-button--outline neon-button--state-ready neon-button--with-icon neon-button--icon-only neon-button neon-pagination__nav-link neon-pagination__last neon-pagination__nav-link neon-pagination__last" tabindex="0" disabled="false" role="button">
          <!-- @slot the content of the link -->
          <div class="neon-icon--name-last-page neon-icon--high-contrast neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 16 16" fill="none" stroke-linecap="round" stroke-linejoin="round" height="100%" width="100%">
              <path d="M2.25 13.799999999999999L8.55 7.5L2.25 1.2" stroke="currentColor" class="neon-svg--stroke"></path>
              <path d="M12.75 1.2V13.799999999999999" stroke="currentColor" class="neon-svg--stroke"></path>
            </svg>
          </div>
          <!--v-if-->
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`NeonListLayout renders load on demand pagination 1`] = `
<div class="neon-list-layout">
  <div>
    <div class="neon-stack--gap-l neon-stack neon-header--page neon-header">
      <!-- @slot stack contents -->
      <div class="neon-swiper--horizontal neon-swiper--fade neon-swiper neon-breadcrumbs--responsive-swiper neon-breadcrumbs">
        <div class="neon-swiper__container">
          <!-- @slot contents of swiper with which to apply overflow scrolling. -->
          <div class="neon-breadcrumbs__container"><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__back neon-breadcrumbs__back" tabindex="0">
              <!-- @slot the content of the link -->
              <!--v-if--><span class="neon-breadcrumbs__back-label">Back</span>
            </a>
            <!--v-if-->
          </div>
        </div>
        <div class="neon-swiper__fade-out"></div>
      </div>
      <div class="neon-inline--gap-l neon-inline neon-header__content">
        <!-- @slot inline contents -->
        <div class="neon-stack--gap-s neon-stack neon-header__content-copy">
          <!-- @slot stack contents -->
          <div class="neon-inline--gap-m neon-inline neon-header__title-wrapper">
            <!-- @slot inline contents -->
            <h1 class="neon-header__title">test title</h1>
            <div class="neon-inline--gap-m neon-inline neon-header__labels">
              <!-- @slot inline contents -->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div class="neon-inline--gap-s neon-inline neon-header__actions">
          <!-- @slot inline contents -->
        </div>
      </div>
    </div><!-- @slot the insert a note into the page -->
    <div class="neon-card-list--list neon-card-list">
      <!-- @slot slot for providing a filter bar component -->
      <div class="neon-inline--gap-l neon-inline neon-card-list__header">
        <!-- @slot inline contents -->
      </div>
      <div class="neon-card-list__cards">
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
        <div class="neon-card-list__card--disabled neon-card-list__card">
          <!-- @slot override the default loading state card -->
          <transition-stub mode="out-in" name="neon-fade-transition" appear="false" persisted="false" css="true"></transition-stub>
        </div>
      </div><span class="neon-card-list__result-count-label">Zeigt 5 von 1,000</span><button class="neon-button--l neon-button--primary neon-button--solid neon-button--state-ready neon-button neon-card-list__show-more neon-card-list__show-more" tabindex="0" type="button">
        <!--v-if--><span class="neon-button__label">Mehr anzeigen</span>
        <!--v-if-->
      </button>
    </div>
  </div>
</div>
`;
